--- a/index.html
+++ b/index.html
@@ -32,8 +32,42 @@
     <title>Project 2 - KeebStore</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <div class="bg-danger">
+      <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
+          <a class="navbar-brand" href="/"
+            >KeebStore <i class="fas fa-keyboard"></i
+          ></a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
 
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="about.html">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="products.html">Products</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="cart.html"
+                  ><i class="fas fa-shopping-basket"></i
+                ></a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
+    </div>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
