Added hero image and footer to homepage

--- a/index.html
+++ b/index.html
@@ -60,13 +60,36 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="cart.html"
-                  ><i class="fas fa-shopping-basket"></i
-                ></a>
+                  ><i class="fas fa-shopping-basket"></i> Cart</a
+                >
               </li>
             </ul>
           </div>
         </nav>
       </div>
+    </div>
+    <div class="jumbotron jumbotron-fluid hero">
+      <div class="container">
+        <h1 class="hero-name text-center text-light">KeebStore</h1>
+        <p class="hero-text lead text-center text-light">
+          Build your dream keyboard here!
+        </p>
+        <div class="d-flex justify-content-center">
+          <a href="/products.html">
+            <button type="button" class="btn btn-danger">
+              Start Building
+            </button></a
+          >
+        </div>
+      </div>
+    </div>
+    <div class="bg-danger text-white text-center py-5 mt-5">
+      <ul class="footer-links">
+        <li><a href="/">Home</a></li>
+        <li><a href="/about.html">About</a></li>
+        <li><a href="/products.html">Products</a></li>
+      </ul>
+      Copyright 2021 <i class="fas fa-keyboard"></i>
     </div>
     <!-- Optional JavaScript; choose one of the two! -->
 
