--- a/products.html
+++ b/products.html
@@ -60,8 +60,8 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="cart.html"
-                  ><i class="fas fa-shopping-basket"></i
-                ></a>
+                  ><i class="fas fa-shopping-basket"></i> Cart</a
+                >
               </li>
             </ul>
           </div>
