--- a/cart.html
+++ b/cart.html
@@ -68,6 +68,14 @@
         </nav>
       </div>
     </div>
+    <div class="bg-danger text-white text-center py-5 mt-5">
+      <ul class="footer-links">
+        <li><a href="/">Home</a></li>
+        <li><a href="/about.html">About</a></li>
+        <li><a href="/products.html">Products</a></li>
+      </ul>
+      Copyright 2021 <i class="fas fa-keyboard"></i>
+    </div>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
