--- a/index.html
+++ b/index.html
@@ -77,10 +77,34 @@
         <div class="d-flex justify-content-center">
           <a href="/products.html">
             <button type="button" class="btn btn-danger">
-              Start Building
-            </button></a
-          >
+              Start Building <i class="fas fa-arrow-right"></i></button
+          ></a>
         </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <p class="h4 text-center mb-3">
+        Checkout these boards made by our satisfied customers!
+      </p>
+      <div class="row d-flex flex-column flex-lg-row">
+        <div class="col mb-5">
+          <img class="img-fluid" src="images/build1.jpg" alt="custom-build-1" />
+        </div>
+        <div class="col mb-5">
+          <img class="img-fluid" src="images/build2.jpg" alt="custom-build-2" />
+        </div>
+        <div class="col mb-5">
+          <img class="img-fluid" src="images/build3.png" alt="custom-build-3" />
+        </div>
+      </div>
+      <hr />
+      <p class="h4 text-center mb-3">Feautured Products</p>
+      <div class="row">
+        <div class="col">GMK</div>
+        <div class="col">Board</div>
+        <div class="col">GMk</div>
+        <div class="col">Switches</div>
       </div>
     </div>
     <div class="bg-danger text-white text-center py-5 mt-5">
