Reformatted images + Added product images to home page

--- a/index.html
+++ b/index.html
@@ -100,11 +100,65 @@
       </div>
       <hr />
       <p class="h4 text-center mb-3">Feautured Products</p>
-      <div class="row">
-        <div class="col">GMK</div>
-        <div class="col">Board</div>
-        <div class="col">GMk</div>
-        <div class="col">Switches</div>
+      <div class="row d-flex flex-column flex-lg-row">
+        <div class="col mb-5">
+          <img
+            class="img-fluid"
+            src="images/productImages/mizu.png"
+            alt="mizu"
+          />
+        </div>
+        <div class="col mb-5">
+          <img
+            class="img-fluid"
+            src="images/productImages/amethyst.jpg"
+            alt="amethyst"
+          />
+        </div>
+        <div class="col mb-5">
+          <img
+            class="img-fluid"
+            src="images/productImages/olivia.jpg"
+            alt="olivia"
+          />
+        </div>
+        <div class="col mb-5">
+          <img
+            class="img-fluid"
+            src="images/productImages/fuji.png"
+            alt="fuji"
+          />
+        </div>
+      </div>
+      <div class="row d-flex flex-column flex-lg-row">
+        <div class="col mb-5">
+          <img
+            class="img-fluid"
+            src="images/productImages/gmmkpro.jpg"
+            alt="gmmkpro"
+          />
+        </div>
+        <div class="col mb-5">
+          <img
+            class="img-fluid"
+            src="images/productImages/tangerine.jpg"
+            alt="tangerine"
+          />
+        </div>
+        <div class="col mb-5">
+          <img
+            class="img-fluid"
+            src="images/productImages/kbdlite.jpg"
+            alt="kbdlite"
+          />
+        </div>
+        <div class="col mb-5">
+          <img
+            class="img-fluid"
+            src="images/productImages/durock.jpg"
+            alt="durock"
+          />
+        </div>
       </div>
     </div>
     <div class="bg-danger text-white text-center py-5 mt-5">
