Home page complete

--- a/index.html
+++ b/index.html
@@ -15,11 +15,15 @@
       integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
       crossorigin="anonymous"
     />
+
+    <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
       rel="stylesheet"
     />
+
+    <!-- Font Awesome -->
 
     <link
       rel="stylesheet"
@@ -27,6 +31,14 @@
       integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
       crossorigin="anonymous"
     />
+
+    <!-- Animate CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="css/style.css" />
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
     <title>Project 2 - KeebStore</title>
@@ -35,7 +47,7 @@
     <div class="bg-danger">
       <div class="container">
         <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
-          <a class="navbar-brand" href="/"
+          <a class="navbar-brand animate__animated animate__fadeIn" href="/"
             >KeebStore <i class="fas fa-keyboard"></i
           ></a>
           <button
@@ -99,65 +111,89 @@
         </div>
       </div>
       <hr />
-      <p class="h4 text-center mb-3">Feautured Products</p>
+      <p class="h3 text-center mb-3">Feautured Products</p>
       <div class="row d-flex flex-column flex-lg-row">
-        <div class="col mb-5">
+        <div class="col mb-5 text-center text-lg-left h5">
           <img
-            class="img-fluid"
+            class="img-fluid mb-2"
             src="images/productImages/mizu.png"
             alt="mizu"
           />
+          GMK Mizu
+          <br />
+          <span class="price">$129.99</span>
         </div>
-        <div class="col mb-5">
+        <div class="col mb-5 text-center text-lg-left h5">
           <img
-            class="img-fluid"
+            class="img-fluid mb-2"
             src="images/productImages/amethyst.jpg"
             alt="amethyst"
           />
+          GMK Amethyst
+          <br />
+          <span class="price">$119.99</span>
         </div>
-        <div class="col mb-5">
+        <div class="col mb-5 text-center text-lg-left h5">
           <img
-            class="img-fluid"
+            class="img-fluid mb-2"
             src="images/productImages/olivia.jpg"
             alt="olivia"
           />
+          GMK Olivia
+          <br />
+          <span class="price">$139.99</span>
         </div>
-        <div class="col mb-5">
+        <div class="col mb-5 text-center text-lg-left h5">
           <img
-            class="img-fluid"
+            class="img-fluid mb-2"
             src="images/productImages/fuji.png"
             alt="fuji"
           />
+          GMK Fuji
+          <br />
+          <span class="price">$219.99</span>
         </div>
       </div>
       <div class="row d-flex flex-column flex-lg-row">
-        <div class="col mb-5">
+        <div class="col mb-5 text-center text-lg-left h5">
           <img
-            class="img-fluid"
+            class="img-fluid mb-2"
             src="images/productImages/gmmkpro.jpg"
             alt="gmmkpro"
           />
+          GMMK Pro
+          <br />
+          <span class="price">$169.99</span>
         </div>
-        <div class="col mb-5">
+        <div class="col mb-5 text-center text-lg-left h5">
           <img
-            class="img-fluid"
+            class="img-fluid mb-2"
             src="images/productImages/tangerine.jpg"
             alt="tangerine"
           />
+          TANGERINE SWITCHES - 10 pack
+          <br />
+          <span class="price">$16.25</span>
         </div>
-        <div class="col mb-5">
+        <div class="col mb-5 text-center text-lg-left h5">
           <img
-            class="img-fluid"
+            class="img-fluid mb-2"
             src="images/productImages/kbdlite.jpg"
             alt="kbdlite"
           />
+          KBD67 LITE DIY KIT
+          <br />
+          <span class="price">$109.99</span>
         </div>
-        <div class="col mb-5">
+        <div class="col mb-5 text-center text-lg-left h5">
           <img
-            class="img-fluid"
+            class="img-fluid mb-2"
             src="images/productImages/durock.jpg"
             alt="durock"
           />
+          Durock V2 Stabilizers
+          <br />
+          <span class="price">$29.99</span>
         </div>
       </div>
     </div>
