--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
     <div class="container">
       <p class="h4 text-center mb-3">
-        Checkout these boards made by our satisfied customers!
+        Check out these boards made by our satisfied customers!
       </p>
       <div class="row d-flex flex-column flex-lg-row">
         <div class="col mb-5">
@@ -196,7 +196,32 @@
           <span class="price">$29.99</span>
         </div>
       </div>
+      <div class="row">
+        <div class="col-3"></div>
+        <div class="col-6">
+          <form>
+            <div class="form-group">
+              <p class="h5 mt-5 mb-2 text-center">
+                Enter your email to save on your next order!
+              </p>
+              <input
+                type="email"
+                class="form-control"
+                id="exampleInputEmail1"
+                aria-describedby="emailHelp"
+                placeholder="Enter Email"
+                aria-label="Enter Email"
+              />
+            </div>
+            <div class="d-flex justify-content-center">
+              <button type="submit" class="btn btn-danger">Submit</button>
+            </div>
+          </form>
+        </div>
+        <div class="col-3"></div>
+      </div>
     </div>
+
     <div class="bg-danger text-white text-center py-5 mt-5">
       <ul class="footer-links">
         <li><a href="/">Home</a></li>
