About Page complete

--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
     <title>Project 2 - KeebStore</title>
   </head>
-  <body>
+  <body class="about-img">
     <div class="bg-danger">
       <div class="container">
         <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
@@ -68,7 +68,23 @@
         </nav>
       </div>
     </div>
-    <div class="bg-danger text-white text-center py-5 mt-5">
+    <div
+      class="container d-flex flex-column justify-content-center align-items-center"
+    >
+      <h1 class="text-center text-light mt-5 about-name">About Us</h1>
+      <p class="h4 text-center text-light about-descript mt-5">
+        At KeebStore we are dedicated to providing a quick and seamless platform
+        for all of your custom mechanical keyboard needs. We want to be your one
+        stop shop, we aim to constantly keep all of your favorites in stock!
+      </p>
+      <img
+        class="about-icon"
+        src="images/keyboard-solid.png"
+        alt="keyboard img"
+      />
+      <p class="h1 text-light">:)</p>
+    </div>
+    <div class="bg-danger text-white text-center py-4 mt-5 fixed-bottom">
       <ul class="footer-links">
         <li><a href="/">Home</a></li>
         <li><a href="/about.html">About</a></li>
