--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </nav>
       </div>
     </div>
-    <div class="jumbotron jumbotron-fluid hero">
+    <div class="jumbotron jumbotron-fluid background-img">
       <div class="container">
         <h1 class="hero-name text-center text-light">KeebStore</h1>
         <p class="hero-text lead text-center text-light">
@@ -222,7 +222,7 @@
       </div>
     </div>
 
-    <div class="bg-danger text-white text-center py-5 mt-5">
+    <div class="bg-danger text-white text-center py-4 mt-5">
       <ul class="footer-links">
         <li><a href="/">Home</a></li>
         <li><a href="/about.html">About</a></li>
