small newsleter fix

--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
                 Enter your email to save on your next order!
               </p>
               <input
+                name="email"
                 type="email"
                 class="form-control"
                 id="exampleInputEmail1"
