Products added to products page

--- a/products.html
+++ b/products.html
@@ -31,7 +31,7 @@
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
     <title>Project 2 - KeebStore</title>
   </head>
-  <body>
+  <body class="about-img">
     <div class="bg-danger">
       <div class="container">
         <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
@@ -68,6 +68,200 @@
         </nav>
       </div>
     </div>
+    <div class="container bg-light">
+      <p class="h1 p-3 font-weight-bold text-center">Products</p>
+      <hr />
+      <p class="h4 text-center mb-3">Key Caps</p>
+      <div class="row p-3">
+        <div class="col">
+          <img
+            class="img-fluid mb-2"
+            src="images/productImages/mizu.png"
+            alt="mizu"
+          />
+          GMK Mizu
+          <br />
+          <span class="price">$129.99</span>
+        </div>
+        <div class="col">
+          <img
+            class="img-fluid mb-2"
+            src="images/productImages/amethyst.jpg"
+            alt="amethyst"
+          />
+          GMK Amethyst
+          <br />
+          <span class="price">$119.99</span>
+        </div>
+        <div class="col">
+          <img
+            class="img-fluid mb-2"
+            src="images/productImages/fuji.png"
+            alt="fuji"
+          />
+          GMK Fuji
+          <br />
+          <span class="price">$219.99</span>
+        </div>
+      </div>
+      <div class="row p-3">
+        <div class="col">
+          <img
+            class="img-fluid mb-2"
+            src="images/productImages/tuzi.png"
+            alt="tuzi"
+          />
+          GMK Tuzi
+          <br />
+          <span class="price">$100.99</span>
+        </div>
+        <div class="col">
+          <img
+            class="img-fluid mb-2"
+            src="images/productImages/watermelon.png"
+            alt="watermelon"
+          />
+          GMK Watermelon
+          <br />
+          <span class="price">$129.99</span>
+        </div>
+        <div class="col">
+          <img
+            class="img-fluid mb-2"
+            src="images/productImages/noel.png"
+            alt="noel"
+          />
+          GMK Noel
+          <br />
+          <span class="price">$119.99</span>
+        </div>
+      </div>
+      <div class="row p-3">
+        <div class="col-4">
+          <img
+            class="img-fluid mb-2"
+            src="images/productImages/olivia.jpg"
+            alt="olivia"
+          />
+          GMK Olivia
+          <br />
+          <span class="price">$119.99</span>
+        </div>
+      </div>
+      <hr />
+      <p class="h4 text-center mb-3">Prebuilt / DIY Keyboards</p>
+      <div class="row p-3">
+        <div class="col">
+          <img
+            class="img-fluid mb-2"
+            src="images/productImages/gmmkpro.jpg"
+            alt="gmmkpro"
+          />
+          GMMK Pro
+          <br />
+          <span class="price">$169.99</span>
+        </div>
+        <div class="col">
+          <img
+            class="img-fluid mb-2"
+            src="images/productImages/kbdlite.jpg"
+            alt="kbdlite"
+          />
+          KBD67 LITE DIY KIT
+          <br />
+          <span class="price">$109.99</span>
+        </div>
+        <div class="col">
+          <img
+            class="img-fluid mb-2"
+            src="images/productImages/annepro.jpg"
+            alt="annepro60"
+          />
+          Anne Pro 60
+          <br />
+          <span class="price">$89.99</span>
+        </div>
+      </div>
+      <hr />
+      <p class="h4 text-center mb-3">Switches</p>
+      <div class="row p-3">
+        <div class="col">
+          <img
+            class="img-fluid mb-2"
+            src="images/productImages/tangerine.jpg"
+            alt="tangerine"
+          />
+          TANGERINE SWITCHES - 10 pack
+          <br />
+          <span class="price">$16.25</span>
+        </div>
+        <div class="col">
+          <img
+            class="img-fluid mb-2"
+            src="images/productImages/gateronyellow.jpg"
+            alt="gateronyellow"
+          />
+          Gateron Yellow Switches - 10 pack
+          <br />
+          <span class="price">$3.25</span>
+        </div>
+        <div class="col">
+          <img
+            class="img-fluid mb-2"
+            src="images/productImages/cherryred.jpg"
+            alt="cherryred"
+          />
+          MX Cherry Red - 10 pack
+          <br />
+          <span class="price">$4.50</span>
+        </div>
+      </div>
+      <hr />
+      <p class="h4 text-center mb-3">Accessories</p>
+      <div class="row p-3">
+        <div class="col">
+          <img
+            class="img-fluid mb-2"
+            src="images/productImages/durock.jpg"
+            alt="durock"
+          />
+          Durock V2 Stabilizers
+          <br />
+          <span class="price">$29.99</span>
+        </div>
+        <div class="col">
+          <img
+            class="img-fluid mb-2"
+            src="images/productImages/artisan.png"
+            alt="artisan"
+          />
+          Artisan Key Cap
+          <br />
+          <span class="price">$49.99</span>
+        </div>
+        <div class="col">
+          <img
+            class="img-fluid mb-2"
+            src="images/productImages/k205g0.jpg"
+            alt="krytox205g0"
+          />
+          Krytox 205G0 Switch Lubricant
+          <br />
+          <span class="price">$7.95</span>
+        </div>
+        <div class="col">
+          <img
+            class="img-fluid mb-2"
+            src="images/productImages/aviator.jpg"
+            alt="aviatorcable"
+          />
+          Coiled Aviator Cable
+          <br />
+          <span class="price">$34.99</span>
+        </div>
+      </div>
+    </div>
+
     <div class="bg-danger text-white text-center py-4 mt-5">
       <ul class="footer-links">
         <li><a href="/">Home</a></li>
