Fixed spacing for mobile view + Adjusted background image

--- a/products.html
+++ b/products.html
@@ -72,8 +72,8 @@
       <p class="h1 p-3 font-weight-bold text-center">Products</p>
       <hr />
       <p class="h4 text-center mb-3">Key Caps</p>
-      <div class="row p-3">
-        <div class="col">
+      <div class="row p-3 d-flex flex-column flex-lg-row">
+        <div class="col mb-5 text-center text-lg-left h5">
           <img
             class="img-fluid mb-2"
             src="images/productImages/mizu.png"
@@ -83,7 +83,7 @@
           <br />
           <span class="price">$129.99</span>
         </div>
-        <div class="col">
+        <div class="col mb-5 text-center text-lg-left h5">
           <img
             class="img-fluid mb-2"
             src="images/productImages/amethyst.jpg"
@@ -93,7 +93,7 @@
           <br />
           <span class="price">$119.99</span>
         </div>
-        <div class="col">
+        <div class="col mb-5 text-center text-lg-left h5">
           <img
             class="img-fluid mb-2"
             src="images/productImages/fuji.png"
@@ -104,8 +104,8 @@
           <span class="price">$219.99</span>
         </div>
       </div>
-      <div class="row p-3">
-        <div class="col">
+      <div class="row p-3 d-flex flex-column flex-lg-row">
+        <div class="col mb-5 text-center text-lg-left h5">
           <img
             class="img-fluid mb-2"
             src="images/productImages/tuzi.png"
@@ -115,17 +115,17 @@
           <br />
           <span class="price">$100.99</span>
         </div>
-        <div class="col">
+        <div class="col mb-5 text-center text-lg-left h5">
           <img
             class="img-fluid mb-2"
-            src="images/productImages/watermelon.png"
-            alt="watermelon"
+            src="images/productImages/olivia.jpg"
+            alt="olivia"
           />
-          GMK Watermelon
+          GMK Olivia
           <br />
           <span class="price">$129.99</span>
         </div>
-        <div class="col">
+        <div class="col mb-5 text-center text-lg-left h5">
           <img
             class="img-fluid mb-2"
             src="images/productImages/noel.png"
@@ -136,22 +136,10 @@
           <span class="price">$119.99</span>
         </div>
       </div>
-      <div class="row p-3">
-        <div class="col-4">
-          <img
-            class="img-fluid mb-2"
-            src="images/productImages/olivia.jpg"
-            alt="olivia"
-          />
-          GMK Olivia
-          <br />
-          <span class="price">$119.99</span>
-        </div>
-      </div>
       <hr />
       <p class="h4 text-center mb-3">Prebuilt / DIY Keyboards</p>
-      <div class="row p-3">
-        <div class="col">
+      <div class="row p-3 d-flex flex-column flex-lg-row">
+        <div class="col mb-5 text-center text-lg-left h5">
           <img
             class="img-fluid mb-2"
             src="images/productImages/gmmkpro.jpg"
@@ -161,7 +149,7 @@
           <br />
           <span class="price">$169.99</span>
         </div>
-        <div class="col">
+        <div class="col mb-5 text-center text-lg-left h5">
           <img
             class="img-fluid mb-2"
             src="images/productImages/kbdlite.jpg"
@@ -171,7 +159,7 @@
           <br />
           <span class="price">$109.99</span>
         </div>
-        <div class="col">
+        <div class="col mb-5 text-center text-lg-left h5">
           <img
             class="img-fluid mb-2"
             src="images/productImages/annepro.jpg"
@@ -184,8 +172,8 @@
       </div>
       <hr />
       <p class="h4 text-center mb-3">Switches</p>
-      <div class="row p-3">
-        <div class="col">
+      <div class="row p-3 d-flex flex-column flex-lg-row">
+        <div class="col mb-5 text-center text-lg-left h5">
           <img
             class="img-fluid mb-2"
             src="images/productImages/tangerine.jpg"
@@ -195,7 +183,7 @@
           <br />
           <span class="price">$16.25</span>
         </div>
-        <div class="col">
+        <div class="col mb-5 text-center text-lg-left h5">
           <img
             class="img-fluid mb-2"
             src="images/productImages/gateronyellow.jpg"
@@ -205,7 +193,7 @@
           <br />
           <span class="price">$3.25</span>
         </div>
-        <div class="col">
+        <div class="col mb-5 text-center text-lg-left h5">
           <img
             class="img-fluid mb-2"
             src="images/productImages/cherryred.jpg"
@@ -218,8 +206,8 @@
       </div>
       <hr />
       <p class="h4 text-center mb-3">Accessories</p>
-      <div class="row p-3">
-        <div class="col">
+      <div class="row p-3 d-flex flex-column flex-lg-row">
+        <div class="col mb-5 text-center text-lg-left h5">
           <img
             class="img-fluid mb-2"
             src="images/productImages/durock.jpg"
@@ -229,7 +217,7 @@
           <br />
           <span class="price">$29.99</span>
         </div>
-        <div class="col">
+        <div class="col mb-5 text-center text-lg-left h5">
           <img
             class="img-fluid mb-2"
             src="images/productImages/artisan.png"
@@ -239,7 +227,7 @@
           <br />
           <span class="price">$49.99</span>
         </div>
-        <div class="col">
+        <div class="col mb-5 text-center text-lg-left h5">
           <img
             class="img-fluid mb-2"
             src="images/productImages/k205g0.jpg"
@@ -249,7 +237,7 @@
           <br />
           <span class="price">$7.95</span>
         </div>
-        <div class="col">
+        <div class="col mb-5 text-center text-lg-left h5">
           <img
             class="img-fluid mb-2"
             src="images/productImages/aviator.jpg"
