Cart page complete

--- a/cart.html
+++ b/cart.html
@@ -31,7 +31,7 @@
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
     <title>Project 2 - KeebStore</title>
   </head>
-  <body>
+  <body class="about-img">
     <div class="bg-danger">
       <div class="container">
         <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
@@ -68,6 +68,155 @@
         </nav>
       </div>
     </div>
+
+    <div class="container bg-light fit-content">
+      <h1 class="p-3 font-weight-bold shopping-name">
+        Shopping Cart <i class="fas fa-shopping-basket shopping-name"></i>
+      </h1>
+      <div class="row mt-5">
+        <div class="col text-center"></div>
+        <div class="col text-center small-text">
+          Product Name
+          <br />
+        </div>
+        <div class="col text-center small-text">Quantity</div>
+        <div class="col text-center small-text">Price</div>
+        <div class="col text-center"></div>
+      </div>
+      <hr />
+      <div class="row px-3">
+        <div
+          class="col mb-5 text-center d-flex justify-content-center align-items-center"
+        >
+          <img
+            class="img-fluid mb-2"
+            src="images/productImages/mizu.png"
+            alt="mizu"
+          />
+        </div>
+        <div
+          class="col mb-5 text-center d-flex justify-content-center align-items-center"
+        >
+          GMK Mizu
+          <br />
+        </div>
+        <div
+          class="col mb-5 text-center d-flex justify-content-center align-items-center"
+        >
+          1
+        </div>
+        <div
+          class="col mb-5 text-center d-flex justify-content-center align-items-center"
+        >
+          <span class="price">$129.99</span>
+        </div>
+        <div
+          class="col mb-5 text-center d-flex justify-content-center align-items-center"
+        >
+          <i class="fas fa-times remove"></i>
+        </div>
+      </div>
+      <div class="row px-3">
+        <div
+          class="col mb-5 text-center d-flex justify-content-center align-items-center"
+        >
+          <img
+            class="img-fluid mb-2"
+            src="images/productImages/gateronyellow.jpg"
+            alt="gateronyellow"
+          />
+        </div>
+        <div
+          class="col mb-5 text-center d-flex justify-content-center align-items-center"
+        >
+          Gateron Yellow Switches - 10 pack
+          <br />
+        </div>
+        <div
+          class="col mb-5 text-center d-flex justify-content-center align-items-center"
+        >
+          10
+        </div>
+        <div
+          class="col mb-5 text-center d-flex justify-content-center align-items-center"
+        >
+          <span class="price">$32.50</span>
+        </div>
+        <div
+          class="col mb-5 text-center d-flex justify-content-center align-items-center"
+        >
+          <i class="fas fa-times remove"></i>
+        </div>
+      </div>
+      <div class="row px-3">
+        <div
+          class="col mb-5 text-center d-flex justify-content-center align-items-center"
+        >
+          <img
+            class="img-fluid mb-2"
+            src="images/productImages/gmmkpro.jpg"
+            alt="gmmkpro"
+          />
+        </div>
+        <div
+          class="col mb-5 text-center d-flex justify-content-center align-items-center"
+        >
+          GMMK Pro
+          <br />
+        </div>
+        <div
+          class="col mb-5 text-center d-flex justify-content-center align-items-center"
+        >
+          1
+        </div>
+        <div
+          class="col mb-5 text-center d-flex justify-content-center align-items-center"
+        >
+          <span class="price">$169.99</span>
+        </div>
+        <div
+          class="col mb-5 text-center d-flex justify-content-center align-items-center"
+        >
+          <i class="fas fa-times remove"></i>
+        </div>
+      </div>
+      <hr />
+      <div class="row">
+        <div class="col"></div>
+        <div class="col"></div>
+        <div class="col text-right">Subtotal:</div>
+        <div class="col text-center">$332.48</div>
+        <div class="col"></div>
+      </div>
+      <div class="row">
+        <div class="col"></div>
+        <div class="col"></div>
+        <div class="col text-right">Shipping</div>
+        <div class="col text-center">Free</div>
+        <div class="col"></div>
+      </div>
+      <div class="row">
+        <div class="col"></div>
+        <div class="col"></div>
+        <div class="col text-right">Total:</div>
+        <div class="col text-center">$332.48</div>
+        <div class="col"></div>
+      </div>
+      <div class="row my-4">
+        <div class="col"></div>
+        <div class="col"></div>
+        <div class="col"></div>
+        <div class="col text-center">
+          <a href="checkout.html"
+            ><button type="button" class="btn btn-danger">
+              Proceed to Checkout
+            </button></a
+          >
+        </div>
+        <div class="col"></div>
+      </div>
+    </div>
+
     <div class="bg-danger text-white text-center py-4 mt-5">
       <ul class="footer-links">
         <li><a href="/">Home</a></li>
