Checkout page complete

--- a/cart.html
+++ b/cart.html
@@ -209,9 +209,8 @@
         <div class="col text-center">
           <a href="checkout.html"
             ><button type="button" class="btn btn-danger">
-              Proceed to Checkout
-            </button></a
-          >
+              Checkout <i class="fas fa-arrow-right"></i></button
+          ></a>
         </div>
         <div class="col"></div>
       </div>
