--- a/checkout.html
+++ b/checkout.html
@@ -43,7 +43,7 @@
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
     <title>Project 2 - KeebStore</title>
   </head>
-  <body>
+  <body class="about-img">
     <div class="bg-danger">
       <div class="container">
         <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
@@ -79,6 +79,126 @@
           </div>
         </nav>
       </div>
+    </div>
+    <div class="container bg-light">
+      <h1 class="p-3 font-weight-bold shopping-name">
+        <i class="far fa-keyboard"></i>
+        Checkout
+      </h1>
+      <hr />
+      <p class="px-3 font-weight-bold">Shipping Information</p>
+      <form class="p-3">
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label for="firstname">First Name *</label>
+            <input
+              type="text"
+              class="form-control"
+              id="firstname"
+              name="firstname"
+              required
+            />
+          </div>
+          <div class="form-group col-md-6">
+            <label for="lastname">Last Name *</label>
+            <input
+              type="text"
+              class="form-control"
+              id="lastname"
+              name="lastname"
+              required
+            />
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="inputAddress">Address *</label>
+          <input
+            type="text"
+            class="form-control"
+            id="inputAddress"
+            placeholder="123 Keeb St"
+            required
+          />
+        </div>
+        <div class="form-group">
+          <label for="inputAddress2">Apartment, studio, or floor</label>
+          <input
+            type="text"
+            class="form-control"
+            id="inputAddress2"
+            placeholder="(Optional)"
+          />
+        </div>
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label for="inputCity">City *</label>
+            <input type="text" class="form-control" id="inputCity" required />
+          </div>
+          <div class="form-group col-md-4">
+            <label for="inputState">State *</label>
+            <input type="text" class="form-control" id="inputState" required />
+          </div>
+          <div class="form-group col-md-2">
+            <label for="inputZip">Zip *</label>
+            <input
+              type="text"
+              class="form-control"
+              id="inputZip"
+              ^[0-9]{5}$
+              required
+            />
+          </div>
+        </div>
+        <hr />
+        <p class="font-weight-bold text-center">Payment Information</p>
+        <div class="form-row">
+          <div class="form-group col-md-6 offset-md-3">
+            <label for="cardHolder">Name on Card *</label>
+            <input type="text" class="form-control" id="cardHolder" required />
+          </div>
+        </div>
+        <div class="form-row">
+          <div class="form-group col-md-6 offset-md-3">
+            <label for="cardNumber">Card Number *</label>
+            <input
+              type="text"
+              class="form-control"
+              id="cardNumber"
+              pattern="(?:(4[0-9]{12}(?:[0-9]{3})?)"
+              required
+            />
+          </div>
+        </div>
+        <div class="form-row">
+          <div class="form-group col-md-3 offset-md-3">
+            <label for="expiryDate">Expiry Date *</label>
+            <input
+              type="text"
+              class="form-control"
+              id="expiryDate"
+              placeholder="mm/yy"
+              pattern="^(0[1-9]|1[0-2])/(19|2[0-1])\d{2}$"
+              required
+            />
+          </div>
+          <div class="form-group col-md-3">
+            <label for="ccvcvc">CVV/CVC *</label>
+            <input
+              type="text"
+              class="form-control"
+              id="ccvcvc"
+              pattern="^[0-9]{3}$"
+              required
+            />
+          </div>
+          <div class="form-group col-md-6"></div>
+        </div>
+        <div class="d-flex justify-content-center align-items-center">
+          <button type="submit" class="btn btn-danger">
+            Complete Purchase
+          </button>
+        </div>
+      </form>
     </div>
 
     <div class="bg-danger text-white text-center py-4 mt-5">
